Fix onClick events on the Home page when high CPS on iOS
OS has difficulties when using <a> & onClick listeners when CPS are very high,
the other page onClick events becomes unresponsive, using <span> & onMouseDown instead
seems to remove that limitation :shrug:

--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,11 @@ a:hover {
   position: relative;
 }
 
+.link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .bottom-gradient {
   position: absolute;
   width: 100%;
